--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,7 @@ h4 {
 
 .cart-sav{
   width: 100%;
+  margin-bottom: 52px;
 }
 
 .text {
@@ -135,6 +136,10 @@ h4 {
   font-family: cursive;
   text-align: inherit;
   margin-bottom: 30px;
+}
+
+.btns {
+  margin-bottom: 60px;
 }
 
 .btn-nc, .btn-ca {
@@ -151,3 +156,39 @@ h4 {
   margin-bottom: 16px;
 }
 
+.midias{
+  background:#004A99;
+  height: 60px;
+}
+
+.face-icone, .insta-icone, .twit-icone, .you-icone {
+  margin-left: 15px;
+  margin-bottom: 10px;
+  align-items: flex-end;
+}
+
+.up {
+  margin-left: 116px;
+  margin-bottom: 2px;
+  width: 50px;
+  height: 50px;
+}
+
+/*
+.far fa-plus {
+  background: black;
+}*/
+
+.footer-info{
+  background: rgb(201, 201, 219) ;
+  padding: 10px 10px 10px 10px;
+}
+
+.info{
+  font-size: 12px;
+  font-family: cursive;
+  text-align: inherit;
+}
+.pgtos{
+  
+}
